--- a/src/main/resources/templates/classList.html
+++ b/src/main/resources/templates/classList.html
@@ -22,54 +22,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <style>
 
 
 
 
-body{
-
-	background-image: url("https://testdrive-archive.azurewebsites.net/performance/chalkboard/Images/EmptyChalkboard.svg");
-	padding: 100px;
-    border-collapse: collapse;
-    background-position: center;
-    background-repeat:no-repeat;
-    background-size: 75%, 75%;
 
 
-}
 
 
-th, td {
-    padding: 5px;
-}
-th {
-    text-align: left;
-}
-jumbo{
-    color: white;
-}
-register{
-    color: black;
-}
-img{
-right: 10px;
-
-}
-
-li{
-    text-align:center;
-}
-ol{
-list-style-position: inside;
 
 
-}
-form{
-font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif;
-}
 
-</style>
+
 </head>
 <body ng-controller="ClassListController" class="nice">
 {{! changing the mustache delimiter so it doesn't conflict with }}
@@ -99,15 +63,15 @@ font-family: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif
             <h2>My Classes:</h2>
             <ol class="f">
                 <span ng-repeat="course in allCourses">
-                    <div>
+                    <div class="container">
                     <li>
 
 
 
-                        <button type="button" class="btn btn-link btn-lg" ng-click="gradebook(course.id)" value="Gradebook">
-                            <font color="white">
+                        <button type="button" id="addgrade" class="btn btn-link btn-lg" ng-click="gradebook(course.id)" value="Gradebook">
+
                         {{course.name}}, Subject: {{course.subject}}, Grade Level: {{course.gradeLevel}}
-                                </font>
+
                         </button>
 
 
