--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -21,6 +21,7 @@ body {
     padding: 2em;
 
 }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -73,6 +74,12 @@ border-collapse: separate;
 
      background: white;
 
+     position: relative;
+     top: 0;
+     bottom: 0;
+     left: 0;
+     right: 0;
+
 
 
 }
@@ -97,6 +104,7 @@ border-collapse: separate;
 
 
 }
+
 
 #dropdown{
     position: fixed;
