--- a/src/main/resources/templates/classList.html
+++ b/src/main/resources/templates/classList.html
@@ -73,6 +73,7 @@
                         {{course.name}}, Subject: {{course.subject}}, Grade Level: {{course.gradeLevel}}
 
                         </button>
+                        <button type="button" class="btn btn-default btn-s" ng-click="deleteClass(course)"><span class="glyphicon glyphicon-trash" > </span></button>
 
 
                     </li>
