--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -114,11 +114,11 @@
     <form class="form-inline">
         <div class="form-group">
             <font color="white">
-              <label for="email">Email:</label>
+              <label class="nice1" for="email">Email:</label>
                 </font>
                <input type="text" class="form-control notnice" id="email" placeholder="Enter Email" ng-model="loginEmail"/>
                 <font color="white">
-                <label for="pwd">Password:</label>
+                <label class="nice1" for="pwd">Password:</label>
                     </font>
                <input type="password" class="form-control notnice" id="pwd" placeholder="Enter password" ng-model="loginPassword">
         </div>
