--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -139,237 +139,43 @@
         <button name="but" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Register</button>
 
 
-    <!-- Modal -->
-                        <div class="modal fade" id="myModal" role="dialog">
-                            <div class="modal-dialog">
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
 
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Register</h4>
-                                    </div>
-                                    <div class="modal-body notnice">
-                                        <div class="notnice">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Register</h4>
+                    </div>
+                    <div class="modal-body notnice">
+                        <div class="notnice">
 
 
-                                            <input type="text" class="form-control" id="first" placeholder="Enter Your First Name" ng-model="registerFirstName"/>
+                            <input type="text" class="form-control" id="first" placeholder="Enter Your First Name" ng-model="registerFirstName"/>
 
-                        <input type="text" class="form-control"  placeholder="Enter Your Last Name" ng-model="registerLastName"/>
+                            <input type="text" class="form-control"  placeholder="Enter Your Last Name" ng-model="registerLastName"/>
 
-                        <input type="email" class="form-control" placeholder="Enter Your Email"  ng-model="registerEmail"/>
+                            <input type="email" class="form-control" placeholder="Enter Your Email"  ng-model="registerEmail"/>
 
-                        <input type="text" class="form-control"  placeholder="Enter Your Password" ng-model="registerPassword"/>
+                            <input type="text" class="form-control"  placeholder="Enter Your Password" ng-model="registerPassword"/>
 
-                        <input type="text" class="form-control"  placeholder="Enter Your School" ng-model="registerSchool"/>
+                            <input type="text" class="form-control"  placeholder="Enter Your School" ng-model="registerSchool"/>
 
-                        <input type="button" class="btn btn-default btn-lg"  ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" data-dismiss="modal" value="Register"/>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
+                            <input type="button" class="btn btn-default btn-lg"  ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" data-dismiss="modal" value="Register"/>
 
                         </div>
-
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   <!--<div class="container"></div>-->
-       <!--&lt;!&ndash; Trigger the modal with a button &ndash;&gt;-->
-    <!--<button type="button" id="register" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModalss">Register</button>-->
-
-        <!--&lt;!&ndash; Modal &ndash;&gt;-->
-    <!--<div class="modal fade" id="myModalss" role="dialog">-->
-        <!--<div class="modal-dialog">-->
-
-            <!--&lt;!&ndash; Modal content&ndash;&gt;-->
-            <!--<div class="modal-content">-->
-                <!--<div class="modal-header">-->
-                    <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
-                    <!--<h4 class="modal-title">Register</h4>-->
-                <!--</div>-->
-                <!--<div class="modal-body">-->
-                        <!--<div>-->
-                        <!--<input type="text" class="form-control" id="first" placeholder="Enter Your First Name" ng-model="registerFirstName"/>-->
-
-                        <!--<input type="text" class="form-control" id="last" placeholder="Enter Your Last Name" ng-model="registerLastName"/>-->
-
-                        <!--<input type="email" class="form-control" id="emails" placeholder="Enter Your Email" ng-model="registerEmail"/>-->
-
-                        <!--<input type="text" class="form-control" id="pass" placeholder="Enter Your Password" ng-model="registerPassword"/>-->
-
-                        <!--<input type="text" class="form-control" id="school" placeholder="Enter Your School" ng-model="registerSchool"/>-->
-
-                        <!--<input type="button" class="btn btn-default btn-lg"  ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>-->
-                  <!---->
-                        <!--</div>-->
-
-                    <!--</div>-->
-                <!--</div>-->
-
-            <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>-->
-            <!--</div>-->
-        <!--</div>-->
-
-  <!---->
-
-
-
-
-
-
-
-
-           <!--<div> &lt;!&ndash; Trigger the modal with a button &ndash;&gt;-->
-    <!--<button type="button" id="classes" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Class</button>-->
-
-               <!--&lt;!&ndash; Modal &ndash;&gt;-->
-    <!--<div class="modal fade" id="myModals" role="dialog">-->
-        <!--<div class="modal-dialog">-->
-
-            <!--&lt;!&ndash; Modal content&ndash;&gt;-->
-            <!--<div class="modal-content">-->
-                <!--<div class="modal-header">-->
-                    <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
-                    <!--<h4 class="modal-title">Add Class</h4>-->
-                <!--</div>-->
-                <!--<div class="modal-body">-->
-                    <!--<div>-->
-                       <!--Name: <input type="text" ng-model="newClassName"/> <br/>-->
-                     <!--Subject: <input type="text" ng-model="newClassSubject"/> <br/>-->
-                        <!--Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>-->
-                     <!--<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>-->
-
-
-
-
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>-->
-            <!--</div>-->
-        <!--</div>-->
-
-    <!--</div>-->
-
-
-
-
-<!--</div>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<div class="container">-->
-    <!--<form class="form-group row" id="form">-->
-        <!--<label for="first" class="col-xs-2 col-form-label">First Name:</label>-->
-        <!--<input type="text" class="form-control" id="first" placeholder="Enter Your First Name" ng-model="registerFirstName"/>-->
-         <!--<label for="last">Last Name:</label>-->
-        <!--<input type="text" class="form-control" id="last" placeholder="Enter Your Last Name" ng-model="registerLastName"/>-->
-         <!--<label for="emails">Email:</label>-->
-        <!--<input type="text" class="form-control" id="emails" placeholder="Enter Your Email" ng-model="registerEmail"/>-->
-         <!--<label for="pass">Password:</label>-->
-        <!--<input type="text" class="form-control" id="pass" placeholder="Enter Your Password" ng-model="registerPassword"/>-->
-         <!--<label for="school">School:</label>-->
-        <!--<input type="text" class="form-control" id="school" placeholder="Enter Your School" ng-model="registerSchool"/>-->
-
-        <!--<input type="button" class="btn btn-default btn-lg"  ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>-->
-
-
-    <!--</form>-->
-<!--</div>-->
-
-
-
-
-
-    <!--<div class>-->
-        <!--<font color="white">-->
-        <!--<h3>Register:</h3>-->
-        <!--First Name: <input type="text"ng-model="registerFirstName"/> <br/>-->
-         <!--Last Name: <input type="text" ng-model="registerLastName"/> <br/>-->
-             <!--Email: <input type="text"     ng-model="registerEmail"/> <br/>-->
-          <!--Password: <input type="text"  ng-model="registerPassword"/> <br/>-->
-            <!--School: <input type="text"    ng-model="registerSchool"/> <br/>-->
-        <!--</font>-->
-        <!--<input type="button" class="btn btn-default btn-lg"  ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>-->
-
-    <!--</div>-->
 
 
 
@@ -380,161 +186,15 @@
 <!--<span ng-if="<%teacherWhoIsLoggedIn%>">-->
 <!--<span ng-if="teacherWhoIsLoggedIn">-->
     <span ng-if="loginSuccessful == false">
-         Your login was not successful. <a href="" class="btn btn-default"> <input type="button" class="btn btn-default btn-lg" ng-click="home()" value="Try again"/> </a>
+        <span style="color: white; text-align: center">
+         <!--Your login was not successful. <a href="" class="btn btn-default"> <input type="button" class="btn btn-default btn-lg" ng-click="home()" value="Try again"/> </a>-->
+         Your login was not successful. <button type="button" class="btn btn-default btn-lg" ng-click="home()"> Try Again </button>
         <!--Your login was not successful. <input type="button" ng-click="home()" value="Try again"/>-->
+        </span>
     </span>
 
-    <!--<span ng-if="loginSuccessful">-->
-        <!--<font color="white">-->
-        <!--Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! </font> <br/><br/>-->
-        <!--<div>-->
-            <!--<font color="white">-->
-            <!--<h2>My Classes:</h2>-->
-            <!--<ol class="f">-->
-                <!--<span ng-repeat="course in allCourses">-->
-                    <!--<li>{{course.name}}, Subject: {{course.subject}}, Grade Level: {{course.gradeLevel}}-->
-                        <!--<input type="button" class="btn btn-default btn-lg" ng-click="gradebook(course.id)" value="Gradebook"/>-->
-                        <!--<input type="button" class="btn btn-default btn-lg" ng-click="graph(course.id)" value="Graph"/>-->
-                    <!--</li>-->
-                <!--</span>-->
-            <!--</ol>-->
-                <!--</font>-->
-
-
-            <!--<div> &lt;!&ndash; Trigger the modal with a button &ndash;&gt;-->
-    <!--<button type="button" id="classes" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Class</button>-->
-
-                  <!--&lt;!&ndash; Modal &ndash;&gt;-->
-    <!--<div class="modal fade" id="myModals" role="dialog">-->
-        <!--<div class="modal-dialog">-->
-
-            <!--&lt;!&ndash; Modal content&ndash;&gt;-->
-            <!--<div class="modal-content">-->
-                <!--<div class="modal-header">-->
-                    <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
-                    <!--<h4 class="modal-title">Add Class</h4>-->
-                <!--</div>-->
-                <!--<div class="modal-body">-->
-                    <!--<div>-->
-                       <!--Name: <input type="text" ng-model="newClassName"/> <br/>-->
-                     <!--Subject: <input type="text" ng-model="newClassSubject"/> <br/>-->
-                        <!--Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>-->
-                     <!--<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>-->
-
-
-
-
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>-->
-            <!--</div>-->
-        <!--</div>-->
-
-    <!--</div>-->
-
-
-
-
-<!--</div>-->
-
-            <!--&lt;!&ndash;<input type="button" ng-click="" value="Add class (coming soon)"/>&ndash;&gt;-->
-
-
-
-
-
-
-
-
-
-
-
-        <!--</div>-->
-<!--</span>-->
-
-
-
-
-
-        <!--<br/><br/><br/>-->
-
-
-
-
-    <!--<h2></h2>-->
-    <!--&lt;!&ndash;<div> &lt;!&ndash; Trigger the modal with a button &ndash;&gt;&ndash;&gt;-->
-    <!--&lt;!&ndash;<button type="button" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Class</button>&ndash;&gt;-->
-
-      <!--&lt;!&ndash;&lt;!&ndash; Modal &ndash;&gt;&ndash;&gt;-->
-    <!--&lt;!&ndash;<div class="modal fade" id="myModals" role="dialog">&ndash;&gt;-->
-        <!--&lt;!&ndash;<div class="modal-dialog">&ndash;&gt;-->
-
-            <!--&lt;!&ndash;&lt;!&ndash; Modal content&ndash;&gt;&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="modal-content">&ndash;&gt;-->
-                <!--&lt;!&ndash;<div class="modal-header">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<button type="button" class="close" data-dismiss="modal">&times;</button>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<h4 class="modal-title">Add Class</h4>&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                <!--&lt;!&ndash;<div class="modal-body">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<div>&ndash;&gt;-->
-                       <!--&lt;!&ndash;Name: <input type="text" ng-model="newClassName"/> <br/>&ndash;&gt;-->
-                     <!--&lt;!&ndash;Subject: <input type="text" ng-model="newClassSubject"/> <br/>&ndash;&gt;-->
-
-                        <!--&lt;!&ndash;Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>&ndash;&gt;-->
-                     <!--&lt;!&ndash;<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>&ndash;&gt;-->
-
-
-
-
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-            <!--&lt;!&ndash;<div class="modal-footer">&ndash;&gt;-->
-                <!--&lt;!&ndash;<button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>&ndash;&gt;-->
-            <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-
-<!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!--&lt;!&ndash;<div>&ndash;&gt;-->
-
-
-        <!--&lt;!&ndash;<h3>Add a class: </h3>&ndash;&gt;-->
-        <!--&lt;!&ndash;Name: <input type="text" ng-model="newClassName"/> <br/>&ndash;&gt;-->
-        <!--&lt;!&ndash;Subject: <input type="text" ng-model="newClassSubject"/> <br/>&ndash;&gt;-->
-        <!--&lt;!&ndash;Grade Level: <input type="number" ng-model="newClassGradeLevel"/> <br/>&ndash;&gt;-->
-        <!--&lt;!&ndash;<input type="button" ng-click="addClass(newClassName, newClassSubject, newClassGradeLevel)" value="Add class"/> <br/>&ndash;&gt;-->
-
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-
-
-<!--</span>-->
 </span>
-    </span>
+</span>
 
 
 </body>
