--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -83,6 +83,10 @@ border-collapse: separate;
 
 
 
+
+
+
+
 }
 #right{
     -webkit-box-ordinal-group: 2;   /* OLD - iOS 6-, Safari 3.1-6 */
@@ -97,9 +101,17 @@ border-collapse: separate;
 
      background: white;
 
-     position:relative;
 
-     right: .5%;
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -124,6 +136,8 @@ left: 8%;
 }
 
 
+
+
 @keyframes example {
     0%   {background-color:red; left:0px; top:0px;}
     25%  {background-color:yellow; left:200px; top:0px;}
@@ -144,4 +158,42 @@ left: 8%;
         animation-duration: 4s;
         animation-iteration-count: infinite;
 }
+
+#gb {
+    display:none;
+
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+}
+#rightone{
+ -webkit-box-ordinal-group: 2;   /* OLD - iOS 6-, Safari 3.1-6 */
+     -moz-box-ordinal-group: 2;      /* OLD - Firefox 19- */
+     -ms-flex-order: 2;              /* TWEENER - IE 10 */
+     -webkit-order: 2;               /* NEW - Chrome */
+     order: 2;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
+
+     width: 20%;
+
+      right:.5%;
+                        /* No flex here, other cols take up remaining space */
+
+     -moz-box-flex: 1;               /* Without this, Firefox 19- expands to widest paragraph, overrides width */
+
+     background: white;
+
+}
+#group{
+
+}
+
+
+
+
+
+
+
+
 
