--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -59,7 +59,7 @@
     <!--</span>-->
     <!--</ol>-->
 
-    <!--</div>-->
+    </div>
 
     <!--<div ng-if="currentClass">-->
     <!--<h3>{{currentClass.name}}'s students: </h3>-->
@@ -102,8 +102,10 @@
             <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">Switch View
             <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li> <a href="#"> <button type="button" class="btn btn-default" id="clickMe">Graph View</button> </a> </li>
+                <li> <a href="#"> <button type="button" class="btn btn-default" id="clickMe">Split View</button> </a> </li>
                 <li> <a href="#"> <button type="button" class="btn btn-default" id="clickMe1">Gradebook View</button>  </a> </li>
+                <li> <a href="#"> <button type="button" class="btn btn-default" id="clickMe2">Graph View</button>  </a> </li>
+
             </ul>
             </div>
 
@@ -345,16 +347,153 @@
     </section>
 
 
-    <section class="right-half1" id="right">
+    <section id="right">
         <div ng-if="graphShowing">
-        <canvas height="500" width="800" class="chart chart-line" chart-data="data"
+        <canvas id="canvas" height="600" width="1650" class="chart chart-line" chart-data="data"
                 chart-labels="labels" chart-series="series" chart-options="options"
                 chart-dataset-override="datasetOverride" chart-click="onClick" width="700" height="400"
         />
         </div>
 
 
+            <div class="dropdown" id="dropdowns" style="display: inline-block">
+
+                <div id="gb">
+            <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">Choose Assignment
+            <span class="caret"></span></button>
+
+            <ul class="dropdown-menu">
+                 <span ng-repeat="currentAssignment in allAssignments">
+                <li> <a href="#"> <button type="button" class="btn btn-default btn-sm"  ng-click="showGraph(currentAssignment)" value="Show graph!"/> {{currentAssignment.name}} </a></li>
+
+                </span>
+            </ul>
+
+
+
+
+
+            <button type="button" class="btn btn-default btn-md" ng-click="curveFlat(assforgraph, gradebookContainer.studentContainers)" value="Flat curve">
+                Flat Curve
+            </button>
+
+            <button href="#" title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content" class="btn btn-default btn-md" ng-click="curveAsPercentageOfHighestGrade(assforgraph, gradebookContainer.studentContainers)" value="Percentage of highest curve">
+                Percent of Highest Curve
+            </button>
+
+            <button type="button" class="btn btn-default btn-md"  ng-click="curveByTakingRoot(assforgraph, gradebookContainer.studentContainers)" value="Square root curve">
+                Square Root Curve
+            </button>
+                    <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
+                        <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
+                    </button>
+
+
+
+
+
+                </div>
+
+
+
+            </div>
+
+
     </section>
+
+
+
+
+
+
+
+<section id="rightone">
+
+    <div ng-if="graphShowing">
+        <canvas id="canvases" height="600" width="1000" class="chart chart-line" chart-data="data"
+                chart-labels="labels" chart-series="series" chart-options="options"
+                chart-dataset-override="datasetOverride" chart-click="onClick" width="700" height="400"
+        />
+
+    </div>
+
+
+    <div class="dropdown" id="dropdowns" style="display: inline-block">
+
+        <div id="gb">
+            <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown">Choose Assignment
+                <span class="caret"></span></button>
+
+            <ul class="dropdown-menu">
+                 <span ng-repeat="currentAssignment in allAssignments">
+                <li> <a href="#"> <button type="button" class="btn btn-default btn-sm"  ng-click="showGraph(currentAssignment)" value="Show graph!"/> {{currentAssignment.name}} </a></li>
+
+                </span>
+            </ul>
+
+
+
+
+
+            <button type="button" class="btn btn-default btn-md" ng-click="curveFlat(assforgraph, gradebookContainer.studentContainers)" value="Flat curve">
+                Flat Curve
+            </button>
+
+            <button href="#" title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content" class="btn btn-default btn-md" ng-click="curveAsPercentageOfHighestGrade(assforgraph, gradebookContainer.studentContainers)" value="Percentage of highest curve">
+                Percent of Highest Curve
+            </button>
+
+            <button type="button" class="btn btn-default btn-md"  ng-click="curveByTakingRoot(assforgraph, gradebookContainer.studentContainers)" value="Square root curve">
+                Square Root Curve
+            </button>
+            <button type="button" class="btn btn-default btn-md"  ng-click="getOriginalGrades(assforgraph)" value="Revert to original grades">
+                <span class = "glyphicon glyphicon-refresh"> Revert-Grades </span>
+            </button>
+
+
+
+
+
+        </div>
+
+
+
+    </div>
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <br/><br/>
